Arduino server + aes encryption + config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.ACDuino=DEBUG
 jwt.security.secret=q3t6w9z$C&F)J@NcQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeTh"
 jwt.security.header=Authorization
 jwt.security.expiration=1800000
+
+aes.security.salt=1233456789
+aes.security.password=mysupersecretpassword
